# path-planner

./: .gitignore  Cargo.toml  shell.nix
client/: package-lock.json  package.json  webpack.config.js
client/src/: index.css  index.html  index.js
client/src/rust/: Cargo.toml
client/src/rust/src/: lib.rs
common/src/: lib.rs
daemon/: Cargo.toml
daemon/src/: data.rs  elevation_data.rs  main.rs
data/rasters_USGS30m/: citation.txt
path-planner/: Cargo.toml
path-planner-egui/: Cargo.toml
path-planner-egui/src/: main.rs
path-planner/src/: color_way_id.glsl  lib.rs  map_fragment_shader.glsl  map_vertex_shader.glsl
www/: .eslintrc  index.css  index.html  index.js
