[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tempfile = "3.3.0"
serde_json = "1.0.92"
serde = { version = "1.0.152", features = ["derive"] }
clap = { version = "4.1.4", features = ["derive"] }
anyhow = "1.0.69"
osmpbf = "0.3.0"
