[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
tempfile = "3.3.0"
serde_json = "1.0.92"
serde = { version = "1.0.152", features = ["derive"] }
osmpbf = "0.3.0"
