[package]
name = "path-planner-egui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
path-planner = { path = "../path-planner" }
eframe = "0.21.3"
egui_glow = "0.21.0"
glow = "0.12.0"
serde_json = "1.0.93"
