[package]
name = "path-planner-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ['cdylib']

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
common = { path = "../../../common" }
path-planner = { path = "../../../path-planner" }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
wasm-bindgen = "0.2"
web-sys = { version = "0.3.61", features = ["HtmlDocument", "HtmlCanvasElement", "WebGl2RenderingContext"] }
glow = "0.12.0"
tracing = "0.1.37"
tracing-wasm = "0.2.1"

[workspace]
